# INU-Assignment-Sync

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  app.py  main.py  pyproject.toml  requirements.txt  run_gui.command  run_gui.sh  setup.sh
.github/workflows/: ci.yml
docs/: screenshots.md  setup.md  troubleshooting.md
electron-app/: index.html  package-lock.json  package.json  vite.config.js
electron-app/electron/: main.js  notarize.cjs  preload.js
electron-app/scripts/: build_icon.sh  generate_icon.mjs  generate_icon.swift
electron-app/src/: App.jsx  main.jsx  styles.css
gui/: __init__.py  app_gui.py
src/: __init__.py  calendar_sync.py  config.py  env_utils.py  logging_utils.py  models.py  normalizer.py  scraper.py  storage.py
